samples/_failures_safe/1761040395_c25990_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a6e1d7b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1a6e1d7b.c:152:9: error: expected expression at end of input
  152 |         if (success)
      |         ^~
./samples/SAFE/__tmp_1a6e1d7b.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a6e1d7b.c:152:9: error: expected declaration or statement at end of input
